# DuckE

./: .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  PiPico.cppcheck  README.md  misra.txt  pipico.cppcheck
.cache/clangd/index/: Cyw43Client.cc.3D0D59D4B2796ED3.idx  Cyw43Client.h.197B085DFBA47866.idx  Cyw43Driver.cc.D2CD9E0B153E523E.idx  Cyw43Driver.h.B3229E0B29DAB0C4.idx  (+30 more)
Diamant/: Diamant_Config.h  stdtypes.h
Diamant/barrier/: barrier.c  barrier.h
Diamant/event/: event.c  event.h
Diamant/pico/: multicore.c  switch_context.S  tick.c
Diamant/port/: multicore.h  port.h
Diamant/queue/: queue.c  queue.h
Diamant/scheduler/: scheduler.c  scheduler.h
Diamant/semaphore/: semph.c  semph.h
Diamant/targets/: target.h
PiPico-cppcheck-build-dir/: audio_device.a1  binary_info.a1  binary_info.c.snalyzerinfo  bootrom.a1  bootrom.c.snalyzerinfo  cdc_device.a1  claim.a1  claim.c.snalyzerinfo  clocks.a1  clocks.c.snalyzerinfo  critical_section.a1  datetime.a1  datetime.c.snalyzerinfo  dcd_rp2040.a1  dfu_device.a1  dfu_rt_device.a1  double_init_rom.a1  double_init_rom.c.snalyzerinfo  double_math.a1  double_math.c.snalyzerinfo  ecm_rndis_device.a1  event.a1  event.c.snalyzerinfo  exception.a1  exception.c.snalyzerinfo  files.txt  flash.a1  flash.c.snalyzerinfo  float_init_rom.a1  float_init_rom.c.snalyzerinfo  float_math.a1  float_math.c.snalyzerinfo  gpio.a1  gpio.c.snalyzerinfo  hid_device.a1  irq.a1  lastResults.xml  lock_core.a1  lock_core.c.snalyzerinfo  main.a1  (+59 more)
pipico-cppcheck-build-dir/: Cyw43Client.a1  Cyw43Client.cc.snalyzerinfo  Cyw43Driver.a1  Cyw43Driver.cc.snalyzerinfo  NetClient.a1  NetClient.cc.snalyzerinfo  Server.a1  Server.cc.snalyzerinfo  files.txt  lastResults.xml  main.a1  main.cc.snalyzerinfo  scheduler.a1  scheduler.s1  statistics.txt  tick.a1
src/: main.c  main.cc  stdtypes.h  test.c
src/Commandline/: Commandline.h  CommandlineParser.cc
src/Cyw43Driver/: Cyw43Client.cc  Cyw43Client.h  Cyw43Driver.cc  Cyw43Driver.h
src/Event/: Event.h  event.c  event.h
src/NetClient/: NetClient.cc  NetClient.h  Server.cc  Server.h
src/NetDriver/: NetDriver.h
src/Pico/: tick.c
src/Queue/: DiamantQueue.h  Queue.h  StdQueue.h
src/Semaphore/: semph.c  semph.h
src/pico/: switch_context.S
src/scheduler/: event.c  event.h  scheduler.c  scheduler.h  switch_context.S  tick.c
src/semaphore/: semph.h
(+11 files in other folders)
